updated iNDS and fixed repo link (html site)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="container">
 	<div class="well">
 		<p><span class="text-primary"><b>Dylan's</span></b> Repository for Cydia/Sileo/Installer/Zebra</p>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://supermamon.github.io/Reposi3/">Add this Repo to your package manager.</a>
+		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dylanelmbark.github.io/">Add this Repo to your package manager.</a>
 	</div>
 </div>
 
@@ -26,18 +26,18 @@
 
 <div class="container">
 	<div class="panel panel-default">
-	  <div class="panel-heading">Old Package</div>
+	  <div class="panel-heading">Coming Soon</div>
 	  <div class="panel-body">
-		This is a sample package with minimal information.
-		It also simulates an old package that's incompatible only with iOS lower than 7.0.<br /><br />
+		Package info coming soon.
+		eta son.<br /><br />
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info</a>
 	  </div>
 	</div>
 
 	<div class="panel panel-default">
-	  <div class="panel-heading">New Package</div>
+	  <div class="panel-heading">Coming Soon</div>
 	  <div class="panel-body">
-		This is a sample package with lots of information.<br /><br />
+		eta son.<br /><br />
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
 	  </div>
 	</div>
