updated github page

--- a/index.html
+++ b/index.html
@@ -21,18 +21,12 @@
 </div>
 
 <div class="container">
-  <h3 id="wells" class="page-header">Featured Packages</h3>
+  <h3 id="wells" class="page-header">Bio (work in progress) lol</h3>
 </div>
 
-<div class="container">
-	<div class="panel panel-default">
-	  <div class="panel-heading">Coming Soon</div>
-	  <div class="panel-body">
-		Package info coming soon.
-		eta son.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.oldpackage">More info</a>
-	  </div>
-	</div>
+<p> Hi my name is Dylan im 17 years old, lives in Sweden, this is my APT Repository that will contain a bunch of free packages and utilities from other developers I find useful.</p>
+
+
 
 	<div class="panel panel-default">
 	  <div class="panel-heading">Coming Soon</div>
