--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 	<div class="well">
-		<p><span class="text-primary"><b>Dylan's</span></b> Repository for Cydia/Sileo/Installer/Zebra</p>
+		<p><span class="text-primary"><b>Dylan's</span></b> Repository, works with Cydia, Sileo, Installer and Zebra</p>
 		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dylanelmbark.github.io/">Add this Repo to your package manager.</a>
 	</div>
 </div>
