update for html site (again)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h3 id="wells" class="page-header">Bio (work in progress) lol</h3>
 </div>
 
-<p> Hi my name is Dylan im 17 years old, lives in Sweden, this is my APT Repository that will contain a bunch of free packages and utilities from other developers I find useful.</p>
+<p> Hi my name is Dylan im 17 years old, lives in Sweden, This repo contains Emulators, Apps, Tweaks and developing tools like noncesetters or binpacks.</p>
 
 
 
