--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 	<div class="well">
-		<p><span class="text-primary"><b>Dylan's</span></b> Repository, works with Cydia, Sileo, Installer and Zebra</p>
+		<p><span class="text-primary"><b>Dylan's</span></b> Repository for iOS APT front-ends, works with Cydia, Sileo, Installer and Zebra</p>
 		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dylanelmbark.github.io/">Add this Repo to your package manager.</a>
 	</div>
 </div>
@@ -24,15 +24,15 @@
   <h3 id="wells" class="page-header">Bio (work in progress) lol</h3>
 </div>
 
-<p> Hi my name is Dylan im 17 years old, lives in Sweden, This repo contains Emulators, Apps, Tweaks and developing tools like noncesetters or binpacks.</p>
+<p>  Hi my name is Dylan im 17 years old, lives in Sweden, This repo contains Emulators, Apps, Tweaks and developing tools like noncesetters or binpacks.</p>
 
 
 
 	<div class="panel panel-default">
-	  <div class="panel-heading">Coming Soon</div>
+	  <div class="panel-heading">Featured Packages</div>
 	  <div class="panel-body">
 		eta son.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">More info</a>
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">eta son</a>
 	  </div>
 	</div>
 </div>
