--- a/index.html
+++ b/index.html
@@ -1,41 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <title>Dylan's Repository</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-</head>
-<body>
-
-<div class="container">
-	<h1><img src="CydiaIcon.png"> Dylan's APT Repo</h1>
-</div>
-
-<div class="container">
-	<div class="well">
-		<p><span class="text-primary"><b>Dylan's</span></b> Repository for iOS APT front-ends, works with Cydia, Sileo, Installer and Zebra</p>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dylanelmbark.github.io/">Add this Repo to your package manager.</a>
-	</div>
-</div>
-
-<div class="container">
-  <h3 id="wells" class="page-header">Bio (work in progress) lol</h3>
-</div>
-
-<p>  Hi my name is Dylan im 17 years old, lives in Sweden, This repo contains Emulators, Apps, Tweaks and developing tools like noncesetters or binpacks.</p>
-
-
-
-	<div class="panel panel-default">
-	  <div class="panel-heading">Featured Packages</div>
-	  <div class="panel-body">
-		eta son.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.supermamon.newpackage">eta son</a>
-	  </div>
-	</div>
-</div>
-
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="description" content="Awesome Unicorns">
+		<meta name="author" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="apple-itunes-app" content="app-id=994182280">
+		<meta property="og:url" content="https://yourwebsite.com">
+		<meta property="og:title" content="App Name">
+		<meta property="og:description" content="Awesome Unicorns">
+		<meta property="og:image" content="https://yourwebsite.com/promo-image.jpg">
+		<meta name="twitter:card" content="app">
+		<meta name="twitter:site" content="@Devfused">
+		<meta name="twitter:description" content="Awesome Unicorns">
+		<meta name="twitter:app:name:iphone" content="App Name">
+		<meta name="twitter:app:id:iphone" content="994182280">
+		<title>App Name - Awesome Unicorns</title>
+		<link href="index.css" rel="stylesheet">
+	</head>
+	<body>
+		<header class="container">
+			<div class="responsive intro-container">
+				<div class="app-icon">
+					<img alt="App icon" src="app-icon.png">
+					<p>Dylan Elmbark's iOS Utilities</p>
+				</div>
+				<div class="intro">
+					<h2>My name is Dylan im a 17 year old web developer from Sweden. I love iOS Jailbreaking and interested in iOS Security. Do not expect much here since this is my first public website, Currently trying to learn Java to code plugins for a server I've played on for 8 years! Cydia repo down below.</h2>
+				</div>
+				<a class="primary-btn app-store-btn" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dylanelmbark.github.io/">Add repo to Cydia</a>
+			</div>
+			<div class="responsive iphone">
+				<div class="iphone-screenshot">
+					<img src="app-screenshot.png" alt="App screenshot">
+				</div>
+				<img class="iphone-mask" src="iphone.png">
+			</div>
+		</header>
+		<footer class="container footer">
+			<div class="sep"></div>
+			<p class="responsive credit">Made by <a href="https://twitter.com/Devfused">Dylan Elmbark</a>, Follow me on twitter ;') -> </p>
+			<div class="responsive contact">
+				<a href="https://twitter.com/Devfused?subject=App Name">Twitter</a>
+			</div>
+		</footer>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-XXXXXXXX-XX', 'auto');
+			ga('send', 'pageview');
+		</script>
+	</body>
 </html>
