fixed wrong title test string

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name="description" content="Awesome Unicorns">
+		<meta name="description" content="Cydia Repository>
 		<meta name="author" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="apple-itunes-app" content="app-id=994182280">
 		<meta property="og:url" content="https://yourwebsite.com">
-		<meta property="og:title" content="App Name">
+		<meta property="og:title" content="Dylan Elmbark's Website">
 		<meta property="og:description" content="Awesome Unicorns">
 		<meta property="og:image" content="https://yourwebsite.com/promo-image.jpg">
 		<meta name="twitter:card" content="app">
@@ -15,7 +15,7 @@
 		<meta name="twitter:description" content="Awesome Unicorns">
 		<meta name="twitter:app:name:iphone" content="App Name">
 		<meta name="twitter:app:id:iphone" content="994182280">
-		<title>App Name - Awesome Unicorns</title>
+		<title>Dylan Elmbark's Website - iOS Repository</title>
 		<link href="index.css" rel="stylesheet">
 	</head>
 	<body>
