--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="twitter:description" content="Awesome Unicorns">
 		<meta name="twitter:app:name:iphone" content="App Name">
 		<meta name="twitter:app:id:iphone" content="994182280">
-		<title>App Name - Awesome Unicorns</title>
+		<title>Dylan's Website/Repo Site</title>
 		<link href="index.css" rel="stylesheet">
 	</head>
 	<body>
@@ -26,6 +26,8 @@
 					<p>Dylan Elmbark's iOS Utilities</p>
 				</div>
 				<div class="intro">
+				<h1>whoami</h1>
+				
 					<h2>My name is Dylan im a 17 year old web developer from Sweden. I love iOS Jailbreaking and interested in iOS Security. Do not expect much here since this is my first public website, Currently trying to learn Java to code plugins for a server I've played on for 8 years! Cydia repo down below.</h2>
 				</div>
 				<a class="primary-btn app-store-btn" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dylanelmbark.github.io/">Add repo to Cydia</a>
