--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 					<h2>My name is Dylan im a 17 year old web developer from Sweden. I love iOS Jailbreaking and interested in iOS Security. Do not expect much here since this is my first public website, Currently trying to learn Java to code plugins for a server I've played on for 8 years! Cydia repo down below.</h2>
 				</div>
 				<a class="primary-btn app-store-btn" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dylanelmbark.github.io/">Add repo to Cydia</a>
+				
+				<b class="primary-btn app-store-btn" href="sileo://source/https://dylanelmbark.github.io/">Add repo to Sileo</a>
 			</div>
 			<div class="responsive iphone">
 				<div class="iphone-screenshot">
